# fred-sol

./: .gitignore  .replit  ARCHITECTURE.md  CHANGELOG.md  DEMO_RECORDING.md  EVERMIND_SUBMISSION.md  MODULE_INDEX.md  Makefile  PITCH.md  PRD.md  README.md  SKILL.md  __init__.py  agent.py  alerts.py  api.py  backtest.py  backtest_results.json  cli.py  config.py  dashboard.py  demo.py  demo_trades.json  estimator.py  executor.py  health.py  live_monitor.py  logger.py  main.py  memory_evermind.py  metrics.py  performance_tracker.py  portfolio.py  pyproject.toml  pytest.ini  record_demo.sh  replit.nix  report_generator.py  requirements.txt  risk.py  (+10 more)
.github/workflows/: test.yml
.streamlit/: config.toml
data/: sample_prices.json
demo-video/: slides.html
docs/: README.md  index.html  sample_report.html
tests/: test_config.py  test_estimator.py  test_executor.py  test_health.py  test_memory.py  test_metrics.py  test_performance.py  test_portfolio.py  test_risk.py  test_scanner.py  test_scheduler.py  test_solana_integration.py  test_strategy.py  test_utils.py  test_wallet.py  test_webhook.py
