[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fred-sol"
version = "0.1.0"
description = "Autonomous Solana Trading Agent - Kelly criterion meets LLM probability estimation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ricky", email = "rickyautobots@gmail.com"}
]
keywords = [
    "solana",
    "trading",
    "ai",
    "agent",
    "defi",
    "kelly-criterion",
    "hackathon"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
full = [
    "fred-sol[dev,dashboard]",
]

[project.urls]
Homepage = "https://github.com/rickyautobots/fred-sol"
Documentation = "https://github.com/rickyautobots/fred-sol#readme"
Repository = "https://github.com/rickyautobots/fred-sol.git"
"Bug Tracker" = "https://github.com/rickyautobots/fred-sol/issues"

[project.scripts]
fred-sol = "fred_sol.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", ".pytest_cache/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
